# auth

./: .gitignore  Cargo.toml  README.md
src/: build.rs  camera.rs  codes.rs  java.rs  lib.rs  qr.rs
src/java/: CameraHelper.java  DialogHelper.java  OtpAuthHelper.java
ui/: add_code_page.slint  app.slint  codes_page.slint  edit_code_page.slint  top_menu.slint
